# ssiglib

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.md.orig  Vagrantfile  appveyor.yml  bkp.travis.yml  codecov.yml  opencv.sh
cmake/: SSFBoostUtil.cmake  SSFConfig.cmake  SSFModules.cmake  SSFOpenCVUtil.cmake  SSFUtil.cmake  SSIGCudaUtil.cmake  SSIGModules.cmake  SSIGOpenCVUtil.cmake  SSIGUtil.cmake
components/: CMakeLists.txt
components/api/: CMakeLists.txt
components/api/include/api/: api_exception.hpp  module.hpp  ssf_configuration.hpp  stream.hpp
components/api/src/: api_exception.cpp  module.cpp  ssf_configuration.cpp  stream.cpp
components/cameras/: CMakeLists.txt
components/cameras/app/: CMakeLists.txt  main.cpp
components/cameras/include/cameras/: SMCamCapabilities.hpp  VideoCameraPTZTrendNet7865.hpp  camera.hpp  cameras_defs.hpp  ip_camera.hpp  ip_fixa.hpp  ip_video_camera.hpp  ip_video_camera_PTZ.hpp  ip_video_camera_PTZ_Trend_Net7865.hpp  video_camera.hpp  video_camera_PTZ.hpp  video_camera_PTZ_Trend_Net7865.hpp
components/cameras/src/: SMCamCMD.cpp  SMData.cpp  camera.cpp  ip_fixa.cpp  video_camera.cpp  video_camera_PTZ.cpp  video_camera_PTZ_Trend_Net7865.cpp
components/cameras/test/: CMakeLists.txt
components/configuration/: CMakeLists.txt
components/configuration/include/configuration/: configuration.hpp  configuration_defs.hpp  configuration_exception.hpp  module.hpp  module_setup.hpp  setup.hpp  setup_exception.hpp  stream.hpp  stream_setup.hpp
components/configuration/src/: configuration.cpp  configuration_exception.cpp  module.cpp  module_setup.cpp  setup.cpp  setup_exception.cpp  stream.cpp  stream_setup.cpp
components/configuration/test/: CMakeLists.txt  test_configuration.cpp  test_configuration.cpp.LOCAL.7224.cpp  test_configuration_exception.cpp  test_exception_setup.cpp  test_main.cpp  test_module.cpp  test_module_setup.cpp  test_setup.cpp  test_stream.cpp  test_stream_setup.cpp
components/core/: CMakeLists.txt  CMakeLists.txt.orig
components/core/include/core/: 2011. 0024. Convolution-low-pass-filtering.ppt  SMCamCMD.hpp  SMData.hpp  VideoCamera.hpp  VideoCameraPTZ.hpp  VideoCameraPTZTrendNet7865.hpp  base.hpp  base_object.hpp  camera.hpp  class.hpp  class_test.hpp  concurrent_queue.hpp  conditional_mutex.hpp  core_defs.hpp  cube.hpp  directory_handle.hpp  exception.h  exception.hpp  file_exception.hpp  file_handle.hpp  file_info.hpp  file_util.hpp  image.hpp  log.hpp  matrix.hpp  moodycamel_concurrent_queue.hpp  mutex.hpp  numeric_parameter.hpp  param.hpp  param_exception.hpp  parameter.hpp  parameter_book.hpp  parameter_exception.hpp  parameter_info.hpp  parameter_manager.hpp  parameter_value.hpp  parameters.hpp  parameters_setup.hpp  params.hpp  plugin.hpp  (+14 more)
components/core/src/: SMCamCapabilities.cpp  VideoCamera.cpp  VideoCameraPTZ.cpp  VideoCameraPTZTrendNet7865.cpp  base_object.cpp  camera.cpp  class.cpp  class_test.cpp  conditional_mutex.cpp  directory_handle.cpp  double_parameter.cpp  exception.cpp  feature.cpp  file_exception.cpp  file_handle.cpp  file_info.cpp  file_util.cpp  image.cpp  log.cpp  matrix.cpp  mutex.cpp  numeric_parameter.cpp  param.cpp  param_exception.cpp  parameter.cpp  parameter_book.cpp  parameter_exception.cpp  parameter_info.cpp  parameter_manager.cpp  parameters.cpp  parameters_setup.cpp  params.cpp  point2d.cpp  point3d.cpp  resource.cpp  resource_info.cpp  resource_setup.cpp  resource_thread.cpp  rw_mutex.cpp  scale_info.cpp  (+2 more)
components/core/test/: CMakeLists.txt  test_basic_structures.cpp  test_concurrent_queue.cpp  test_exception.cpp  test_files.cpp  test_image.cpp  test_log.cpp  test_main.cpp  test_param.cpp  test_parameter.cpp  test_parameter_info.cpp  test_parameters.cpp  test_parameters_setup.cpp  test_params.cpp  test_plugin.cpp  test_resource.cpp  test_version_info.cpp
components/core/test/subtest_plugins/: CMakeLists.txt  plugin_instance.cpp  plugin_instance.hpp
components/core/test/test_plugins/: CMakeLists.txt  plugin_instance.cpp  plugin_instance.hpp
components/core/test/test_plugins/PluginExample/: CMakeLists.txt
components/core/test/test_plugins/PluginExample/src/: MyPlugin.cpp  MyPlugin.h
components/core/test/test_plugins/PluginLoaderExample/: CMakeLists.txt
components/core/test/test_plugins/PluginLoaderExample/src/: main.cpp
components/fes/: CMakeLists.txt
components/fes/src/: fes_source_dummy.cpp
components/fes/test/: CMakeLists.txt
components/math/: CMakeLists.txt
components/math/include/math/: math.hpp
components/math/src/: math.cpp
components/param_temp/: CMakeLists.txt
components/param_temp/include/param_temp/: param_temp.hpp
components/param_temp/src/: param_temp.cpp
components/statistics/: CMakeLists.txt
components/statistics/include/statistics/: pls.hpp
components/statistics/src/: pls.cpp
data/tests/algorithms/: kmeans_.yml  oaaData.yml
data/tests/core/: parameters.yml
data/tests/descriptors/: OFCM_person23_running_d4_uncomp.yml  cooc_matrix0000.yml  cooc_matrix0045.yml  cooc_matrix0090.yml  cooc_matrix0135.yml  firefly.yml  hog1_expected.yml  person23_running_d4_uncomp.avi
data/tests/ml/: iris.yml  kmeans_.yml  oaaData.yml  pls.yml  singhData.yml  svm.yml
doc/doxygen/: CMakeLists.txt  doxyfile.in
modules/: CMakeLists.txt
modules/algorithms/src/: alg_source_dummy.cpp  algorithm.cpp  classification.cpp  classifierClustering.cpp  classifier_clustering.cpp  clusteringMethod.cpp  clustering_method.cpp  descriptor_interface.cpp  feature_extraction.cpp  hog_features.cpp  iterableMethod.cpp  kmeans.cpp  lbp_features.cpp  learningMethod.cpp  merger.cpp  oaaClassifier.cpp  oaa_classifier.cpp  pls.cpp  plsClassifier.cpp  pls_classifier.cpp  (+8 more)
modules/descriptors/: descriptor.cpp  descriptor.hpp
puppet/manifests/: site.pp
scripts/: README.md  readme.txt  ssf_class_generate.py  ssig_class_generate.py  update_license.py
scripts/data/: ssf_template_header.hpp  ssf_template_license.txt  ssf_template_source.cpp  ssiglib_template_header.thpp  ssiglib_template_source.tcpp  ssiglib_template_test.tcpp
(+301 files in other folders)
