#root/components/CMakeLists.txt

###############################################################################
# COMPONENTS SUBDIRECTORIES
###############################################################################
add_subdirectory (core)
#add_subdirectory (statistics)
#add_subdirectory (math)
add_subdirectory (api)